fix ConfigurablesModifiedTest (failed because of context-dependent New menu)

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -161,6 +161,7 @@ action.Compare.SameVersion.text=Compare with the Same Repositor_y Version
 action.Compare.LastVersion.text=Compare with Latest Repository _Version
 action.Compare.Selected.text=_Compare with...
 group.NewGroup.text=_New
+group.WeighingNewGroup.text=_New
 action.NewClass.text=Java Class
 action.NewFile.text=File
 action.NewDir.text=Directory/Package
