Spellchecker plugin: redesign and refactoring, add TokenizerFactory extension poit, resolve dependencies, move java-specific tokenizers to java-i18n module, move jsp-specific tokenizers to jsp-base-impl module

--- a/plugins/java-i18n/src/META-INF/plugin.xml
+++ b/plugins/java-i18n/src/META-INF/plugin.xml
@@ -2,6 +2,7 @@
   <id>com.intellij.java-i18n</id>
   <name>I18n for Java</name>
   <depends>com.intellij.properties</depends>
+  <depends optional="true" config-file="spellchecker-support.xml">com.intellij.spellchecker</depends>
   <resource-bundle>messages.PropertiesBundle</resource-bundle>
   <extensionPoints>
     <extensionPoint name="resourceBundleManager"
