"new in current directory" action: ctrl-alt-ins in editor

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -252,6 +252,8 @@ action.$SelectAll.text=Select _All
 action.$SelectAll.description=Select all
 action.NewElement.text=_New...
 action.NewElement.description=Create new class, interface, file or directory
+action.NewElementSamePlace.text=_New...
+action.NewElementSamePlace.description=Create new class, interface, file or directory
 action.$Delete.text=_Delete
 action.$Delete.description=Delete selected item
 action.ToggleBookmark.text=Toggle _Bookmark
