toggling import popups

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -119,6 +119,8 @@ action.EditorToggleShowWhitespaces.text=Sh_ow Whitespaces
 action.EditorToggleShowWhitespaces.description=Toggle display whitespaces in current editor
 action.EditorToggleShowLineNumbers.text=Show L_ine Numbers
 action.EditorToggleShowLineNumbers.description=Toggle display line numbers in current editor
+action.ViewImportPopups.text=Show Import Popups
+action.ViewImportPopups.description=Toggle display import popups in current file
 action.EditorScrollToCenter.text=Scroll to Center
 action.EditorToggleCase.text=Toggle Case
 action.EditorJoinLines.text=Join Lines
