--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1236,7 +1236,9 @@ comparison.to.nan.problem.descriptor1=Comparison to <code>#ref</code> is always 
 comparison.to.nan.problem.descriptor2=Comparison to <code>#ref</code> is always true #loc
 comparison.to.nan.replace.quickfix=replace with call to 'isNaN()'
 confusing.floating.point.literal.change.quickfix=Change To canonical form
-implicit.numeric.conversion.ignore.option=Ignore widening conversions
+implicit.numeric.conversion.ignore.widening.conversion.option=Ignore widening conversions
+implicit.numeric.conversion.ignore.char.conversion.option=Ignore conversions from and to char
+implicit.numeric.conversion.ignore.constant.conversion.option=Ignore conversions from constants and literals
 implicit.numeric.conversion.problem.descriptor=Implicit numeric conversion of <code>#ref</code> from ''{0}'' to ''{1}'' #loc
 implicit.numeric.conversion.convert.quickfix=Convert to ''{0}'' literal
 implicit.numeric.conversion.make.explicit.quickfix=Make conversion explicit
