Adds a notion of a tuple parameter. Adapts paramater and argument inspections and Ctrl+P handler to use it. Adds tests for Ctrl+P handler. Closes PY-200.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -48,6 +48,7 @@ INSP.must.have.first.parameter=Method must have a first parameter, usually calle
 INSP.probably.mistyped.self=Did not you mean 'self'?
 INSP.usually.named.self=Usually first parameter of a method is named 'self'
 INSP.usually.named.cls=Usually first parameter of a classmethod is named 'cls'
+INSP.first.param.must.not.be.tuple=First parameter of a non-static method must not be a tuple
 
 # PyRedeclarationInspection
 INSP.NAME.redeclaration=Names redeclared without usage
@@ -94,6 +95,14 @@ ANN.break.outside.loop='break' outside loop
 ANN.continue.outside.loop='continue' outside loop
 ANN.cant.continue.in.finally='continue' not supported inside 'finally' clause
 ANN.default.except.must.be.last=default 'except:' must be last
+
+ANN.$0.both.global.and.param=Name ''{0}'' used both as a parameter and as a global
+ANN.$0.assigned.before.global.decl=Name ''{0}'' is assigned before global declaration
+
+ANN.duplicate.param.name=duplicate parameter name
+ANN.starred.param.after.kwparam=* parameter after ** paremeter
+ANN.regular.param.after.starred=regular parameter after * or ** parameter
+ANN.non.default.param.after.default=non-default parameter follows default parameter
 
 ### parsing
 PARSE.expected.expression=expression expected
