- shadow for non-movable and non-resizeable popups - ability to create non-movable popups with title panel from component popup builder

--- a/platform-resources_eng/src/misc/registry.properties
+++ b/platform-resources_eng/src/misc/registry.properties
@@ -17,6 +17,7 @@ ide.debugMode.description=Record additonal information to make bug reports more 
 ide.forcedShowTooltip=alt
 ide.forcedShowTooltip.description=Shortcut for forced show tooltip
 ide.tree.yeildingUiUpdate=true
+ide.popup.dropShadow=true
 ide.tree.showBusyIndicator=true
 ide.tree.waitForReadyTimout=250
 ide.tree.clearOnHideTime=120000
