"capture allocations" action

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -6,6 +6,8 @@ action.CaptureMemorySnapShot.text=Capture Memory Snapshot
 action.CaptureMemorySnapShot.description=Capture memory snapshot
 action.CaptureCPUUsageData.text=Capture CPU Usage Data
 action.CaptureCPUUsageData.description=Capture CPU usage data
+action.CaptureAllocations.text=Capture Allocations
+action.CaptureAllocations.description=Capture memory allocations data
 action.ContextHelp.text=Conte_xt Help
 action.ContextHelp.description=Show context help
 action.RunConfiguration.text=Select Run/Debug Configuration
@@ -880,8 +882,10 @@ action.StructuralSearchPlugin.StructuralSearchAction.description=Structural Sear
 action.StructuralSearchPlugin.StructuralReplaceAction.text=Repla_ce Structurally...
 action.StructuralSearchPlugin.StructuralReplaceAction.description=Structural Replace
 
-stop.capture.cpu.usage.data.action.name=Capture cpu usage data, now capturing
-stop.capture.cpu.usage.data.action.description=Stop capture cpu usage data
+stop.capture.cpu.usage.data.action.name=Capture CPU usage data, now capturing
+stop.capture.cpu.usage.data.action.description=Stop capturing CPU usage data
+stop.capture.allocations.usage.data.action.name=Capture allocations data, now capturing
+stop.capture.allocations.usage.data.action.description=Stop capturing allocations data
 
 action.IntegrateFiles.text=Integrate
 action.IntegrateFiles.description=Integrate selected files or directories
