--- a/platform-resources_eng/src/messages/CommonBundle.properties
+++ b/platform-resources_eng/src/messages/CommonBundle.properties
@@ -107,7 +107,8 @@ failed.to.make.file.writeable.error.message=Failed to make {0} writeable.
 file.size.format.bytes={0}b
 file.size.format.kbytes={0}Kb
 file.size.format.mbytes={0}Mb
-profiling.captured.cpu.snapshot.message.text=Captured cpu snapshot:{0}.zip is placed in user home directory
+profiling.captured.cpu.snapshot.message.text=Captured CPU snapshot:{0}.zip is placed in user home directory
+profiling.captured.allocations.snapshot.message.text=Captured allocations snapshot:{0}.zip is placed in user home directory
 information.dialog.title=Information
 captured.memory.snapshot.placed.in.user.home.directory.message.text=Captured memory snapshot:{0}.zip is placed in user home directory
 
