--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -403,6 +403,8 @@
 
     <projectService serviceInterface="org.jetbrains.plugins.groovy.annotator.intentions.dynamic.DynamicToolWindowWrapper"
                     serviceImplementation="org.jetbrains.plugins.groovy.annotator.intentions.dynamic.DynamicToolWindowWrapper"/>
+
+    <projectViewPane implementation="org.jetbrains.plugins.grails.projectView.v2.GrailsProjectViewPane"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij.debugger">
@@ -542,9 +544,6 @@
     </component>
     <component>
       <implementation-class>org.jetbrains.plugins.groovy.codeInspection.local.GroovyAddImportsPassFactory</implementation-class>
-    </component>
-    <component>
-      <implementation-class>org.jetbrains.plugins.grails.projectView.v2.GrailsProjectViewPane</implementation-class>
     </component>
     <component>
       <implementation-class>org.jetbrains.plugins.grails.config.GrailsModuleStructureSynchronizer</implementation-class>
