Find/replace dialog cosmetics

--- a/platform-resources_eng/src/messages/FindBundle.properties
+++ b/platform-resources_eng/src/messages/FindBundle.properties
@@ -79,7 +79,7 @@ find.options.replace.preserve.case=Preser&ve case
 find.options.whole.words.only=&Whole words only
 find.options.string.literals.only=String &literals only
 find.options.comments.only=C&omments only
-find.options.regular.expressions=Regular &expressions
+find.options.regular.expressions=Regular &expression
 find.direction.group=Direction
 find.direction.forward.radio=F&orward
 find.direction.backward.radio=&Backward
