--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -498,8 +498,8 @@
             text="Make Grails Web Archive" description="Generate Web Archive">
       <add-to-group group-id="BuildMenu" anchor="last"/>
     </action>
-    <action id="Grails.RunTarget" class="org.jetbrains.plugins.grails.actions.target.GrailsRunTarget"
-            text="Run Grails Target" description="Run arbitrary Grails target">
+    <action id="Mvc.RunTarget" class="org.jetbrains.plugins.groovy.mvc.MvcRunTarget"
+            text="Run Grails/Griffon Target" description="Run arbitrary Grails/Griffon target">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
       <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt G"/>
     </action>
