--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -35,6 +35,15 @@ maven.import.environment.settings=&Environment settings...
 maven.import.environment.settings.title=Maven environment
 maven.import.title.module.dir=Select directory for IDEA module files (*.iml)
 
+maven.continue.button=Continue
+maven.skip.button=Skip
+maven.import.message.remove.modules=Maven importer needs to replace following module(s):\n\
+  {0}\n\
+  Press ''{1}'' to replace module(s) and perform Maven import.\n\
+  Press ''{2}'' not to replace module(s) and not to import following Maven project(s):\n\
+  {3}\n\
+  Skipped Maven project(s) will be added to ignore list.
+
 maven.import.message.delete.obsolete=These modules have been removed from maven structure:\n{0}\n\nDo you want them to be removed from the project too?
 maven.navigator.nothing.to.display=<html><center>There are no Maven projects to display.<br><br>\
   You may use {0} to add a project<br>\
