--- a/resources_eng/src/messages/JavaErrorMessages.properties
+++ b/resources_eng/src/messages/JavaErrorMessages.properties
@@ -6,7 +6,7 @@ annotation.illegal.array.initializer=Illegal initializer for ''{0}''
 annotation.duplicate.annotation=Duplicate annotation
 annotation.duplicate.attribute=Duplicate attribute ''{0}''
 annotation.missing.attribute={0} missing though required
-annotation.not.applicable=@''{0}'' not applicable to {1}
+annotation.not.applicable=''@{0}'' not applicable to {1}
 annotation.nonconstant.attribute.value=Attribute value must be constant
 annotation.invalid.annotation.member.type=Invalid type for annotation member
 annotation.cyclic.element.type=Cyclic annotation element type
@@ -20,6 +20,10 @@ annotation.name.is.missing=Annotation attribute must be of the form 'name=value'
 annotation.target.ANNOTATION_TYPE=annotation type
 # suppress inspection "unused property"
 annotation.target.TYPE=type
+# suppress inspection "unused property"
+annotation.target.TYPE_USE=type use
+# suppress inspection "unused property"
+annotation.target.TYPE_PARAMETER=type parameter
 # suppress inspection "unused property"
 annotation.target.CONSTRUCTOR=constructor
 # suppress inspection "unused property"
