--- a/platform-resources_eng/src/messages/PsiBundle.properties
+++ b/platform-resources_eng/src/messages/PsiBundle.properties
@@ -71,6 +71,7 @@ jsp.documentation.message.example.of.use=Example\\&nbsp;of\\&nbsp;use:<br><pre>{
 jdk.1.4.language.level.description=1.4 - 'assert' keyword
 jdk.1.5.language.level.description=5.0 - 'enum' keyword, autoboxing, etc.
 jdk.1.6.language.level.description=6.0 - @Override in interfaces
+jdk.1.7.language.level.description=7.0 - Type annotations
 
 #access levels
 default.package.presentation=<default>
