--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -71,7 +71,10 @@ INSP.unreachable.code=This code is unreachable
 
 # PyMethodFirstArgAssignmentInspection
 INSP.NAME.first.arg.assign=Reassignment of method's first argument
-INSP.first.arg.$0.assigned=Method''s parameter ''{0}'' reassigned 
+INSP.first.arg.$0.assigned=Method''s parameter ''{0}'' reassigned
+
+# PyStringFormatInspection
+INSP.NAME.str.format=Detect errors in string formatting operations.
 
 ### Annotators ###
 ANN.deleting.none=deleting None
