wording; show icons from OS also for files of unknown type

--- a/platform-resources_eng/src/messages/FileTypesBundle.properties
+++ b/platform-resources_eng/src/messages/FileTypesBundle.properties
@@ -1,6 +1,6 @@
 filetype.plaintext.description=Text files
 filetype.chooser.title=Register New File Type Association
-filetype.chooser.prompt=The file ''{0}'' cannot be associated with a registered file type. Please choose one:
+filetype.chooser.prompt=The file ''{0}'' is not associated with any file type. Please define the association:
 filetype.registered.patterns.group=Registered Patterns
 filetype.registered.pattern.remove.button=Re&move
 filetype.registered.pattern.add.button=&Add...
