--- a/plugins/IntelliLang/src/META-INF/plugin.xml
+++ b/plugins/IntelliLang/src/META-INF/plugin.xml
@@ -18,6 +18,7 @@
   <depends optional="true" config-file="intellilang-xpath-support.xml">XPathView</depends>
   <depends optional="true" config-file="intellilang-java-support.xml">com.intellij.modules.java</depends>
   <depends optional="true" config-file="intellilang-xml-support.xml">com.intellij.modules.xml</depends>
+  <depends optional="true" config-file="intellilang-groovy-support.xml">org.intellij.groovy</depends>
 
   <idea-version since-build="8300" />
 
@@ -25,7 +26,7 @@
 
   <extensionPoints>
     <extensionPoint name="languageSupport"
-                    interface="org.intellij.plugins.intelliLang.inject.LanguageInjectorSupport"/>
+                    interface="org.intellij.plugins.intelliLang.inject.LanguageInjectionSupport"/>
   </extensionPoints>
   <extensions defaultExtensionNs="com.intellij">
     <errorHandler implementation="com.intellij.diagnostic.ITNReporter" />
@@ -50,7 +51,7 @@
     <applicationConfigurable implementation="org.intellij.plugins.intelliLang.Settings"/>
 
     <multiHostInjector implementation="org.intellij.plugins.intelliLang.inject.TemporaryPlacesInjector"/>
-    <multiHostInjector implementation="org.intellij.plugins.intelliLang.inject.MissingSupportLanguageInjector" order="last"/>
+    <multiHostInjector implementation="org.intellij.plugins.intelliLang.inject.DefaultLanguageInjector" order="last"/>
 
     <projectService serviceInterface="org.intellij.plugins.intelliLang.inject.TemporaryPlacesRegistry"
                     serviceImplementation="org.intellij.plugins.intelliLang.inject.TemporaryPlacesRegistry"/>
