VCS: indicator update for refresh after commit

--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -263,6 +263,7 @@ commit.dialog.default.commit.operation.name=Comm_it
 commit.dialog.include.action.name=Include into commit
 commit.dialog.failed.commit.template=Failed commit: {0}
 commit.dialog.completed.successfully=Completed successfully
+commit.dialog.refresh.files=Synchronizing files...
 commit.dialog.rejected.commit.template=Rejected commit: {0}
 commit.dialog.changelist.label=Change list:
 commit.dialog.changed.files.label=Changed &Files
