Support anonymous classes in Groovy 1.7

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -346,3 +346,5 @@ assignment.expected='=' expected
 tuple.cant.be.placed.in.class=Multiple assignments are not allowed for fields
 immutable.class.should.be.final=Class with '@Immutable' annotation should be final
 singleton.class.should.have.private.constructor=Class with '@Singleton' annotation should have private constructor
+static.declaration.in.inner.class=Inner classes cannot have static declarations
+constructors.are.not.allowed.in.anonymous.class=Constructors are not allowed in anonymous class
