--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -57,6 +57,8 @@ remove.parentheses.from.method.call.intention.family.name=Remove Unnecessary Par
 remove.parentheses.from.method.call.intention.name=Remove Unnecessary Parentheses
 java.style.properties.invocation.intention.family.name=Change Java-style accessor invocation to Groovy-style property reference
 java.style.properties.invocation.intention.name=Change to Groovy-style property reference
+replace.abstract.class.instance.by.map.intention.family.name=Change anonymous class to dynamic instantiation
+replace.abstract.class.instance.by.map.intention.name=Change to dynamic instantiation
 
 ###########################################################################################################
 # Convert parameter to map entry refactoring
