--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -32,6 +32,7 @@
     <extensionPoint name="nonCodeProcessor" interface="org.jetbrains.plugins.groovy.lang.resolve.NonCodeMembersProcessor"/>
     <extensionPoint name="libraryManager" interface="org.jetbrains.plugins.groovy.config.LibraryManager"/>
     <extensionPoint name="positionManagerDelegate" interface="org.jetbrains.plugins.groovy.extensions.debugger.ScriptPositionManagerHelper"/>
+    <extensionPoint name="compilerExtension" interface="org.jetbrains.plugins.groovy.compiler.GroovyCompilerExtension"/>
   </extensionPoints>
 
   <extensions defaultExtensionNs="org.intellij.groovy">
@@ -45,6 +46,7 @@
     <libraryManager implementation="org.jetbrains.plugins.groovy.griffon.GriffonLibraryManager"/>
     <libraryManager implementation="org.jetbrains.plugins.gant.config.GantLibraryManager"/>
     <positionManagerDelegate implementation="org.jetbrains.plugins.gant.debugger.GantPositionManagerHelper"/>
+    <compilerExtension implementation="org.jetbrains.plugins.grails.GrailsCompilerExtension"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij">
