--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -28,11 +28,15 @@
   <depends>com.intellij.properties</depends>
 
   <extensionPoints>
-    <extensionPoint name="grails.facetProvider" interface="org.jetbrains.plugins.grails.util.GrailsFacetProvider"/>
-    <extensionPoint name="nonCodeProcessor" interface="org.jetbrains.plugins.groovy.lang.resolve.NonCodeMembersProcessor"/>
     <extensionPoint name="libraryManager" interface="org.jetbrains.plugins.groovy.config.LibraryManager"/>
+
+    <extensionPoint name="nonCodeProcessor" interface="org.jetbrains.plugins.groovy.lang.resolve.NonCodeMembersProcessor"/>
+    <extensionPoint name="propertyEnhancer" interface="org.jetbrains.plugins.groovy.lang.psi.PropertyEnhancer"/>
+
     <extensionPoint name="positionManagerDelegate" interface="org.jetbrains.plugins.groovy.extensions.debugger.ScriptPositionManagerHelper"/>
     <extensionPoint name="compilerExtension" interface="org.jetbrains.plugins.groovy.compiler.GroovyCompilerExtension"/>
+
+    <extensionPoint name="grails.facetProvider" interface="org.jetbrains.plugins.grails.util.GrailsFacetProvider"/>
   </extensionPoints>
 
   <extensions defaultExtensionNs="org.intellij.groovy">
@@ -47,6 +51,7 @@
     <libraryManager implementation="org.jetbrains.plugins.gant.config.GantLibraryManager"/>
     <positionManagerDelegate implementation="org.jetbrains.plugins.gant.debugger.GantPositionManagerHelper"/>
     <compilerExtension implementation="org.jetbrains.plugins.grails.GrailsCompilerExtension"/>
+    <propertyEnhancer implementation="org.jetbrains.plugins.grails.InjectedServiceTypeProvider"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij">
