add PyTrailingSemicolonInspection and RemoveTrailingSemicolonQuickFix (PY-189)

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -27,6 +27,9 @@ QFIX.failed.to.add.field=<br/>Failed to add a field!<br/><br/>
 QFIX.NAME.add.method.$0.to.class.$1=Add method ''{0}''() to class {1}
 QFIX.failed.to.add.method=<br/>Failed to add a method!<br/><br/>
 
+# RemoveTrailingSemicolonQuickFix
+QFIX.remove.trailing.semicolon=Remove trailing semicolon
+
 
 ### Inspections: INSP ###
 INSP.GROUP.python=Python
@@ -78,6 +81,9 @@ INSP.NAME.str.format=Errors in string formatting operations
 
 # PyMethodOverridingInspection
 INSP.NAME.method.over=Method signature does not match signature of overridden method
+
+# PyTrailingSemicolonInspection
+INSP.NAME.trailing.semicolon=Trailing semicolon in statement
 
 ### Annotators ###
 ANN.deleting.none=deleting None
