--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -325,7 +325,7 @@ dynamic.properties.table.no.arguments=Arguments list is empty.
 groovy.sdk.configuration=Groovy SDK configuration
 new.button.label=New
 groovy.sdk.configuration.label=<html><b>Groovy SDK:</b><br>Choose Groovy SDK specific for this module</html>
-add.new.groovy.lib=New Groovy or Grails SDK
+add.new.groovy.lib=New SDK
 invalid.groovy.sdk.path.message=Invalid path to Groovy SDK
 invalid.groovy.sdk.path.text=Wrong path specified
 duplicate.groovy.lib.version=Duplicated Groovy SDK version
@@ -334,7 +334,6 @@ groovy.sdk.combo.box.project.item=<No Groovy SDK>
 no.groovy.facet=Groovy Facet expected
 new.groovy.facet.detected=Groovy Facet detected
 Constructor=Constructor
-facet.create.lib.title=Create Groovy library
 facet.create.project.lib=Create &Project Groovy library ''{0}''
 facet.create.application.lib=Create Glob&al Groovy library ''{0}''
 groovy.like.library.found=Groovy library found
