IDEADEV-38810: Validate default Groovy Map class constructor arguments

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -205,6 +205,9 @@ dynamize.invalid.interface.text=Dynamize invalid interface instantiation
 dynamize.invalid.interface.family.name=Dynamize invalid code
 class.to.import.chooser.title=Choose class to import
 unused.import.statement=Unused import statement
+static.declaration.in.inner.class=Inner classes cannot have static declarations
+constructors.are.not.allowed.in.anonymous.class=Constructors are not allowed in anonymous class
+no.such.property=Property ''{0}'' does not exist
 
 # {0} - colspan, {1} - method name, {2} - class name, {3} - formal myParameters row, {4} - arguments row
 argument.mismatch.html.tooltip=\
@@ -345,5 +348,3 @@ assignment.expected='=' expected
 tuple.cant.be.placed.in.class=Multiple assignments are not allowed for fields
 immutable.class.should.be.final=Class with '@Immutable' annotation should be final
 singleton.class.should.have.private.constructor=Class with '@Singleton' annotation should have private constructor
-static.declaration.in.inner.class=Inner classes cannot have static declarations
-constructors.are.not.allowed.in.anonymous.class=Constructors are not allowed in anonymous class
