--- a/plugins/maven/src/main/resources/IndicesBundle.properties
+++ b/plugins/maven/src/main/resources/IndicesBundle.properties
@@ -1,12 +1,11 @@
 maven.indices=Repository Indices
 maven.index.url=URL
 maven.index.type=Type
-maven.index.timestamp=Updated
-maven.index.timestamp.unknown=Never
-maven.index.timestamp.error=Error
+maven.index.updated=Updated
+maven.index.updated.never=Never
+maven.index.updated.error=Error
 maven.indices.updating=Updating Maven Repository Indices...
-maven.indices.updating.index=Updating {0}
-maven.indices.updating.indexing=Indexing {0}
-maven.indices.updating.saving=Saving caches...
+maven.indices.updating.index=Updating [{0}] {1}
+maven.indices.updating.saving=Saving indices...
 repository.plugin.corrupt={0} not a Maven 2 plugin file
 repository.plugin.title=Opening Maven plugin file
