--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -485,6 +485,7 @@ unshelve.changes.dialog.title=Unshelve Changes
 ignored.edit.multiple.directories=Selected {0} directories
 close.tab.action.name=Close
 revert.changes.title=Revert Changes
+action.revert.selected.changes.text=Revert Selected Changes
 revert.changes.default.name=Revert: {0}
 shelved.version.name=Shelved version
 local.version.title=Local version
